--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Clica aqui</h1>
     <button id="botao">Botão</button>
-    <h3 id="status">Status</h3>
+    <h3 id="status">STATUS</h3>
   </body>
   <script
   src="https://code.jquery.com/jquery-3.3.1.js"
